--- a/mobilefirst/scss/_1023.scss
+++ b/mobilefirst/scss/_1023.scss
@@ -2,7 +2,8 @@
 ---------------------------------------------------------------------------------------------------- */
 
 @media only screen and (max-width: 1023px) {
-
+	
+	/*
 	.site-inner,
 	.wrap {
 		max-width: 800px;
@@ -27,6 +28,12 @@
 		width: 100%;
 	}
 	
+	.footer-widgets-1,
+	.footer-widgets-2 {
+		border-bottom: 1px solid tint($color-black, 90%);
+		padding-bottom:40px;
+	}
+	
 	.content-sidebar-sidebar .content-sidebar-wrap .sidebar-primary,
 	.sidebar-content-sidebar .content-sidebar-wrap .sidebar-primary,
 	.sidebar-sidebar-content .content-sidebar-wrap.sidebar-primary,
@@ -38,7 +45,11 @@
 		padding-left: 5%;
 		padding-right: 5%;
 	}
-
+	*/
+	
+	/* # Site Navigation
+	-------------------------------------------------- */
+	
 	.genesis-nav-menu li,
 	.header-image .title-area,
 	.site-header ul.genesis-nav-menu,
