--- a/mobilefirst/scss/_1024.scss
+++ b/mobilefirst/scss/_1024.scss
@@ -1,53 +1,76 @@
 /* # Media Queries
 ---------------------------------------------------------------------------------------------------- */
 
-@media only screen and (min-width: 1200px) {
-
+@media only screen and (min-width: 1024px) {
+	
 	.site-inner,
 	.wrap {
-		max-width: 1140px;
+		max-width: 960px;
+	}
+	
+	.content-sidebar-sidebar .content-sidebar-wrap {
+		float: left;
+	}
+	
+	.sidebar-content-sidebar .content-sidebar-wrap,
+	.sidebar-sidebar-content .content-sidebar-wrap {
+		float: right;
+	}
+	
+	.content-sidebar .content,
+	.content-sidebar-sidebar .content,
+	.sidebar-content-sidebar .content {
+		float: left;
+	}
+	
+	.content {
+		float: right;
 	}
 
 	.content-sidebar-sidebar .content-sidebar-wrap,
 	.sidebar-content-sidebar .content-sidebar-wrap,
 	.sidebar-sidebar-content .content-sidebar-wrap {
-		/* width: 920px; */
-		@include structure(920, 1140);
+		/* width: 740px; */
+		@include structure(740, 960);
 	}
 
 	.content,
 	.site-header .widget-area {
-		/* width: 800px; */
-		@include structure(800, 1140);
+		/* width: 620px; */
+		@include structure(620, 960);
 	}
 
 	.sidebar-content-sidebar .content,
 	.sidebar-sidebar-content .content,
 	.content-sidebar-sidebar .content {
-		/* width: 580px; */
-		@include structure(580, 920);
+		/* width: 400px; */
+		@include structure(400, 740);
 	}
-
+	
 	.sidebar-primary {
-		/* width: 300px; */
-		@include structure(300, 1140);
+		float:right;
+		@include structure(300, 960);
 	}
 	
 	.content-sidebar-sidebar .content-sidebar-wrap .sidebar-primary,
 	.sidebar-content-sidebar .content-sidebar-wrap .sidebar-primary,
 	.sidebar-sidebar-content .content-sidebar-wrap.sidebar-primary,
 	.sidebar-sidebar-content .sidebar-primary {
-		@include structure(300, 920);
+		@include structure(300, 740);
 	}
 	
 	.sidebar-secondary {
-		@include structure(180, 1140);
+		float:left;
+		@include structure(180, 960);
+	}
+	.content-sidebar-sidebar .sidebar-secondary {
+		float: right;
 	}
 
 	.footer-widgets-1,
 	.footer-widgets-2,
 	.footer-widgets-3 {
-		@include grid(3, 40, 1140);
+		@include grid(3, 40, 960);
 	}
 
 }
