--- a/mobilefirst/scss/_1340.scss
+++ b/mobilefirst/scss/_1340.scss
@@ -47,11 +47,7 @@
 	.footer-widgets-1,
 	.footer-widgets-2,
 	.footer-widgets-3 {
-		width: 340px;
-	}
-
-	.footer-widgets-1 {
-		margin-right: 60px;
+		@include grid(3, 40, 1140);
 	}
 
 }
