--- a/mobilefirst/scss/_1380.scss
+++ b/mobilefirst/scss/_1380.scss
@@ -1,3 +1,8 @@
+/* # Media Queries
+---------------------------------------------------------------------------------------------------- */
+
+@media only screen and (min-width: 1380px) {
+	
 /* # Structure and Layout
 ---------------------------------------------------------------------------------------------------- */
 
@@ -99,6 +104,4 @@
 	@include structure(180, 1280);
 }
 
-.content-sidebar-sidebar .sidebar-secondary {
-	float: right;
 }
