--- a/mobilefirst/scss/_site_footer.scss
+++ b/mobilefirst/scss/_site_footer.scss
@@ -2,10 +2,9 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-	background-color: #fff;
-	border-top: 1px solid #eee;
-	font-size: 16px;
-	font-size: 1.6rem;
+	background-color: $color-white;
+	border-top: 1px solid tint($color-black, 90%);
+	@include font(1.6, 2.4);
 	line-height: 1;
 	padding: 60px 0;
 	text-align: center;
