--- a/mobilefirst/scss/_site_navigation.scss
+++ b/mobilefirst/scss/_site_navigation.scss
@@ -113,6 +113,7 @@
 .nav-primary {
 	background-color: $color-white;
 	border-top: 1px solid tint($color-black, 90%);
+	border-bottom: 1px solid tint($color-black, 90%);
 }
 
 /* ## Footer Navigation
