--- a/mobilefirst/scss/_1380.scss
+++ b/mobilefirst/scss/_1380.scss
@@ -104,4 +104,15 @@
 	@include structure(180, 1280);
 }
 
+/* # Footer Widgets
+---------------------------------------------------------------------------------------------------- */
+
+.footer-widgets-1,
+.footer-widgets-2,
+.footer-widgets-3 {
+	display:block;
+	float:left;
+	@include grid(3, 40, 1280);
+}
+
 }
