--- a/mobilefirst/scss/_860.scss
+++ b/mobilefirst/scss/_860.scss
@@ -2,6 +2,97 @@
 ---------------------------------------------------------------------------------------------------- */
 
 @media only screen and (min-width: 860px) {
+	
+/* # Table of Contents
+- HTML5 Reset
+	- Baseline Normalize
+	- Box Sizing
+	- Float Clearing
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Mixins
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Defaults
+	- Typographical Elements
+	- Headings
+	- Objects
+	- Forms
+	- Tables
+	- Screen Reader Text
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Structure and Layout
+	- Site Containers
+	- Column Widths and Positions
+	- Grids
+
+	@import "structure_layout";
+	@import "structure_layout_grid";
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Common Classes
+	- Avatar
+	- Genesis
+	- Search Form
+	- Titles
+	- WordPress
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Widgets
+	- Featured Content
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Plugins
+	- Genesis eNews Extended
+	- Jetpack
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Skip Links
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Site Header
+	- Title Area
+	- Widget Area
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Site Navigation
+	- Accessible Menu
+	- Site Header Navigation
+	- After Header Navigation
+	- Footer Navigation
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Content Area
+	- Entries
+	- Entry Meta
+	- Pagination
+	- Comments
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Sidebars
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Footer Widgets
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Site Footer
+---------------------------------------------------------------------------------------------------- */
+
+
 
 /*
 	.site-inner {
