--- a/mobilefirst/scss/_site_header.scss
+++ b/mobilefirst/scss/_site_header.scss
@@ -13,9 +13,9 @@
 --------------------------------------------- */
 
 .title-area {
-	float: left;
+	margin:0 auto;
 	padding: 10px 0;
-	width: 300px;
+	width: 250px;
 }
 
 .header-image .title-area {
