--- a/mobilefirst/scss/_1380.scss
+++ b/mobilefirst/scss/_1380.scss
@@ -2,8 +2,33 @@
 ---------------------------------------------------------------------------------------------------- */
 
 @media only screen and (min-width: 1380px) {
-	
-/* # Structure and Layout
+
+/* # Table of Contents
+- HTML5 Reset
+	- Baseline Normalize
+	- Box Sizing
+	- Float Clearing
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Mixins
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Defaults
+	- Typographical Elements
+	- Headings
+	- Objects
+	- Forms
+	- Tables
+	- Screen Reader Text
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Structure and Layout
+	- Site Containers
+	- Column Widths and Positions
+	- Grids
 ---------------------------------------------------------------------------------------------------- */
 
 /* ## Site Containers
@@ -15,9 +40,8 @@
 	max-width: 1280px;
 }
 
-.full-width-content .breadcrumb {
-	margin: 0 auto 20px;
-	width:90%;
+.full-width-content .breadcrumb,
+.full-width-content .entry{
 	max-width: 1280px;
 }
 
@@ -104,7 +128,102 @@
 	@include structure(180, 1280);
 }
 
-/* # Footer Widgets
+	/* ## Grid
+	--------------------------------------------- */
+	
+	.full-width-content .gridcontainer .row_headline{
+		max-width: 1280px;
+	}
+	
+	.full-width-content .content .coll1,
+	.coll1 {
+		@include structure(1280, 1280);
+	}
+	.full-width-content .content .coll2,
+	.coll2 {
+		@include grid(2, 40, 1280);
+	}
+	.full-width-content .content .coll2_3,
+	.coll2_3 {
+		@include grid_alt(2, 40, 1280);
+	}
+	.full-width-content .content .coll3,
+	.coll3 {
+		@include grid(3, 40, 1280);
+	}
+	.full-width-content .content .coll3_4,
+	.coll3_4 {
+		@include grid_alt(3, 40, 1280);
+	}
+	.full-width-content .content .coll4,
+	.coll4 {
+		@include grid(4, 40, 1280);
+	}
+	.full-width-content .content .coll4_5,
+	.coll4_5 {
+		@include grid_alt(4, 40, 1280);
+	}
+	.full-width-content .content .coll5,
+	.coll5 {
+		@include grid(5, 40, 1280);
+	}
+	.full-width-content .content .coll6,
+	.coll6 {
+		@include grid(6, 40, 1280);
+	}
+
+/*
+- Common Classes
+	- Avatar
+	- Genesis
+	- Search Form
+	- Titles
+	- WordPress
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Widgets
+	- Featured Content
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Plugins
+	- Genesis eNews Extended
+	- Jetpack
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Skip Links
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Site Header
+	- Title Area
+	- Widget Area
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Site Navigation
+	- Accessible Menu
+	- Site Header Navigation
+	- After Header Navigation
+	- Footer Navigation
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Content Area
+	- Entries
+	- Entry Meta
+	- Pagination
+	- Comments
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Sidebars
+---------------------------------------------------------------------------------------------------- */
+
+/*
+- Footer Widgets
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets-1,
@@ -114,5 +233,10 @@
 	float:left;
 	@include grid(3, 40, 1280);
 }
+
+/*
+- Site Footer
+---------------------------------------------------------------------------------------------------- */
+
 
 }
