--- a/mobilefirst/scss/_site_navigation.scss
+++ b/mobilefirst/scss/_site_navigation.scss
@@ -45,6 +45,12 @@
 	z-index: 99;
 }
 
+.genesis-nav-menu .sub-menu li {
+	display:block;
+	float:none;
+	max-width:230px;
+}
+
 .genesis-nav-menu .sub-menu a {
 	background-color: $color-white;
 	border: 1px solid tint($color-black, 90%);
@@ -57,7 +63,7 @@
 }
 
 .genesis-nav-menu .sub-menu .sub-menu {
-	margin: -56px 0 0 199px;
+	margin: -64px 0 0 230px;
 }
 
 .genesis-nav-menu .menu-item:hover {
