--- a/mobilefirst/scss/_structure_layout_mobilefirst.scss
+++ b/mobilefirst/scss/_structure_layout_mobilefirst.scss
@@ -11,6 +11,22 @@
 	max-width: 800px;
 }
 
+.full-width-content .site-inner{
+	width:100%;
+	max-width:100%;
+}
+
+.full-width-content .breadcrumb,
+.full-width-content .entry{
+	margin:0 auto;
+	width:90%;
+	max-width: 800px;
+}
+
+.full-width-content .breadcrumb {
+	margin-bottom:20px;
+}
+
 .content,
 .content-sidebar-sidebar .content,
 .content-sidebar-sidebar .content-sidebar-wrap,
@@ -46,4 +62,188 @@
 .site-header .wrap {
 	padding-left: 5%;
 	padding-right: 5%;
+}
+
+/* ## Grid
+--------------------------------------------- */
+
+.gridcontainer {
+	display:block;
+	float:left;
+	width:100%;
+	margin-bottom:0px;
+}
+
+.full-width-content .gridcontainer .row_headline{
+	margin:0 auto;
+	margin-bottom:20px;
+	width:90%;
+	max-width: 800px;
+	text-align:left;
+}
+
+.content .gridcontainer.White:nth-child(2){
+	padding-top:0;
+}
+
+.site-inner .gridcontainer:last-child {
+	margin-bottom:0;
+}
+.content .gridcontainer::nth-child(2n){
+	padding-top:0;
+}
+
+.site-inner .gridcontainer [class*="coll"] p:last-child {
+	margin-bottom:0;
+}
+
+.coll1,
+.coll2,
+.coll2_3,
+.coll3,
+.coll3_4,
+.coll4,
+.coll4_5,
+.coll5,
+.coll6{
+	margin-bottom:40px;
+}
+
+/* # Colour background
+--------------------------------------------- */
+
+.full-width-content .site-inner {
+	width:100%;
+	max-width:100%;
+}
+
+.full-width-content .entry,
+.full-width-content .gridcontainer .wrap {
+	margin:0 auto;
+	width:90%;
+	max-width: 1280px;
+}
+
+.full-width-content .gridcontainer.team .wrap {
+	max-width:872px;
+}
+.full-width-content .entry {
+	margin-bottom:40px;
+}
+
+.full-width-content .gridcontainer.Non.Black .row_headline,
+.full-width-content .gridcontainer.Non.Red .row_headline,
+.full-width-content .gridcontainer.Non.Grey .row_headline,
+.full-width-content .gridcontainer.Non.White .row_headline,
+.full-width-content .gridcontainer.Non .row_headline{
+	display:none;
+}
+
+.full-width-content .gridcontainer.Black,
+.full-width-content .gridcontainer.Red,
+.full-width-content .gridcontainer.Grey,
+.full-width-content .gridcontainer.White {
+	padding:120px 0 80px;
+	margin-bottom:0;
+}
+
+.full-width-content .gridcontainer.Black {
+	background-color:$color-black;
+	color:tint($color-black, 90%);
+}
+.full-width-content .gridcontainer.Red {
+	background-color:$color-primary-two;
+	color:tint($color-black, 90%);
+}
+.full-width-content .gridcontainer.Grey {
+	background-color:tint($color-black, 90%);
+}
+
+.full-width-content .gridcontainer.Black h1,
+.full-width-content .gridcontainer.Black h2,
+.full-width-content .gridcontainer.Black h3,
+.full-width-content .gridcontainer.Black h4,
+.full-width-content .gridcontainer.Black h5,
+.full-width-content .gridcontainer.Black h6,
+.full-width-content .gridcontainer.Red h1,
+.full-width-content .gridcontainer.Red h2,
+.full-width-content .gridcontainer.Red h3,
+.full-width-content .gridcontainer.Red h4,
+.full-width-content .gridcontainer.Red h5,
+.full-width-content .gridcontainer.Red h6 {
+	color:tint($color-black, 90%);
+}
+
+.full-width-content .gridcontainer.Non .wrap {
+	margin:0 auto;
+	width:100%;
+	max-width: 100%;
+}
+
+.full-width-content .gridcontainer.Non.Black,
+.full-width-content .gridcontainer.Non.Red,
+.full-width-content .gridcontainer.Non.Grey,
+.full-width-content .gridcontainer.Non.White,
+.full-width-content .gridcontainer.Non {
+	margin:0px;
+	padding:0px;
+}
+.full-width-content .gridcontainer.Non:nth-child(2) {
+	margin-top:0px;
+	padding-top:0px;
+}
+.full-width-content .content .gridcontainer.Non .coll1,
+.full-width-content .content .gridcontainer.Non .coll2,
+.full-width-content .content .gridcontainer.Non .coll2_3,
+.full-width-content .content .gridcontainer.Non .coll3,
+.full-width-content .content .gridcontainer.Non .coll3_4,
+.full-width-content .content .gridcontainer.Non .coll4,
+.full-width-content .content .gridcontainer.Non .coll4_5,
+.full-width-content .content .gridcontainer.Non .coll5,
+.full-width-content .content .gridcontainer.Non .coll6,
+.full-width-content .content .gridcontainer.Non .coll7,
+.full-width-content .content .gridcontainer.Non .coll8,
+.full-width-content .content .gridcontainer.Non .coll9,
+.full-width-content .content .gridcontainer.Non .coll10,
+.full-width-content .content .gridcontainer.Non .coll11,
+.full-width-content .content .gridcontainer.Non .coll12,{
+	float:left;
+	margin-bottom:0px;
+}
+
+.content .gridcontainer.Non .coll2 {
+	@include grid(2, 0, 1280);
+}
+.content .gridcontainer.Non .coll2_3 {
+	@include grid_alt(2, 0, 1280);
+}
+.content .gridcontainer.Non .coll3 {
+	@include grid(3, 0, 1280);
+}
+.content .gridcontainer.Non .coll3_4 {
+	@include grid_alt(3, 0, 1280);
+}
+
+.content .gridcontainer.Non .coll4 {
+	@include grid(4, 0, 1280);
+}
+.content .gridcontainer.Non .coll4_5 {
+	@include grid_alt(4, 0, 1280);
+}
+.content .gridcontainer.Non .coll5 {
+	@include grid(5, 0, 1280);
+}
+.content .gridcontainer.Non .coll6 {
+	@include grid(6, 0, 1280);
+}
+
+.full-width-content .content .gridcontainer.Non .wysiwyg{
+	padding:60px;
+	min-height:450px;
+}
+
+.full-width-content .content .gridcontainer.Non .backimage{
+	min-height:450px;
+	background-size:cover;
+	background-position:50% 50%;
 }
