--- a/mobilefirst/scss/css/style.css
+++ b/mobilefirst/scss/css/style.css
@@ -726,6 +726,9 @@ th:first-child {
   padding: 120px 0 80px;
   margin-bottom: 0; }
 
+.full-width-content .gridcontainer:nth-child(2) {
+  padding-top: 0; }
+
 .full-width-content .gridcontainer.Black {
   background-color: #000000;
   color: #e6e6e6; }
