--- a/mobilefirst/scss/style.scss
+++ b/mobilefirst/scss/style.scss
@@ -67,8 +67,11 @@
 - Plugins
 	- Genesis eNews Extended
 	- Jetpack
+	- Full Width Tabs
 */
 	@import "plugins";
+	@import "fullwidthtabs";
+	@import "icomoon_icons";
 /*
 - Skip Links
 */
