--- a/mobilefirst/scss/_icomoon_icons.scss
+++ b/mobilefirst/scss/_icomoon_icons.scss
@@ -1,7 +1,7 @@
 .nine-icon {
     display: inline-block;
-    width: 1em;
-    height: 1em;
+    width: 18px;
+    height: 18px;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
